--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
         
       {% endif %}
       {% if site.show_downloads %}
-        <a href="{{ site.github.zip_url }}" class="btn">Download</a>
+        <a href="https://www.dropbox.com/s/q4517cop0wzqwz9/biblioteka.exe?dl=1" class="btn">Download</a>
         
       {% endif %}
     </header>
