--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,7 @@
 
     <main id="content" class="main-content" role="main">
       {{ content }}
+      <p><img src="https://www.dropbox.com/s/mguikq5n43bubva/2020-01-03_18h35_46.jpg?dl=1" alt="" width="564" height="454" /></p>
 
       <footer class="site-footer">
         {% if site.github.is_project_page %}
