--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,8 +60,8 @@ div.desc {
 <body>
 
 <div class="gallery">
-  <a target="_blank" href="img_5terre.jpg">
-    <img src="https://www.dropbox.com/s/uhwi7uf8ygy5cx3/2020-01-03_18h35_20.jpg?dl=1" alt="Cinque Terre" width="600" height="400">
+  <a target="_blank" href="login.jpg">
+    <img src="login.jpg" alt="login" width="600" height="400">
   </a>
   
 </div>
