--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,27 +61,27 @@ div.desc {
 
 <div class="gallery">
   <a target="_blank" href="login.jpg">
-    <img src="login.jpg" alt="login" width="600" height="400">
+    <img src="login.jpg" alt="login" width="800" height="600">
   </a>
   
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="img_forest.jpg">
-    <img src="https://www.dropbox.com/s/mguikq5n43bubva/2020-01-03_18h35_46.jpg?dl=1" alt="Forest" width="600" height="400">
+  <a target="_blank" href="change.jpg">
+    <img src="change.jpg" alt="Change" width="800" height="600">
   </a>
   
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="img_forest.jpg">
-    <img src="https://www.dropbox.com/s/tl3rhpfvd9jb257/2020-01-03_18h35_37.jpg?dl=1" alt="Forest" width="600" height="400">
+  <a target="_blank" href="main.jpg">
+    <img src="main.jpg" alt="Main" width="800" height="600">
   </a>
   
 </div>
 
 
-
+<p></p>
 
 
       <footer class="site-footer">
