--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,9 @@ div.desc {
 </style>
 </head>
 <body>
-
+<p><strong>Run as admin</strong></p>
+<div id="gtx-trans" style="position: absolute; left: -29px; top: -14px;">&nbsp;</div>
+  
 <div class="gallery">
   <a target="_blank" href="login.jpg">
     <img src="login.jpg" alt="login" width="800" height="600">
@@ -81,7 +83,7 @@ div.desc {
 </div>
 
 
-<p></p>
+
 
 
       <footer class="site-footer">
