--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,13 +3,15 @@
   <head>
 
     {% if site.google_analytics %}
-      <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
-      <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', '{{ site.google_analytics }}');
-      </script>
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-30650780-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-30650780-1');
+</script>
+
     {% endif %}
     <meta charset="UTF-8">
 
